media path is fixed

--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
 		<div class="container">
 			<!-- Background Image Parallax -->
 			<div class="jarallax">
-				<img class="jarallax-img" src="/media/1.webp" alt="" />
+				<img class="jarallax-img" src="./media/1.webp" alt="" />
 				<h2 class="text">Adipisicing deserunt</h2>
 			</div>
 			<div class="jarallax">
-				<img class="jarallax-img" src="/media/2.webp" alt="" />
+				<img class="jarallax-img" src="./media/2.webp" alt="" />
 				<h2 class="text">Ipsum numquam</h2>
 			</div>
 			<div class="jarallax">
-				<img class="jarallax-img" src="/media/3.webp" alt="" />
+				<img class="jarallax-img" src="./media/3.webp" alt="" />
 				<h2 class="text">Ipsum debitis.</h2>
 			</div>
 			<div class="jarallax">
-				<img class="jarallax-img" src="/media/4.webp" alt="" />
+				<img class="jarallax-img" src="./media/4.webp" alt="" />
 				<h2 class="text">Dolor optio?</h2>
 			</div>
 			<div class="jarallax">
-				<img class="jarallax-img" src="/media/5.webp" alt="" />
+				<img class="jarallax-img" src="./media/5.webp" alt="" />
 				<h2 class="text">Ipsum ea.</h2>
 			</div>
 		</div>
